TASK: Remove dep

--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
         { "name": "naitsirch", "email": "login.naitsirch@arcor.de" }
     ],
     "require": {
-        "php": ">=5.3.8",
-        "tecnickcom/tcpdf": "6.2.*"
+        "php": ">=5.3.8"
     },
     "autoload": {
         "psr-0" : { "Tcpdf\\Extension\\" : "src/" }
